--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -25,11 +25,13 @@ module:
   help: 0
   history: 0
   image: 0
+  jsonapi: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
   mysql: 0
   next: 0
+  next_jsonapi: 0
   node: 0
   options: 0
   page_cache: 0
