--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-project-message": "^10.2",
         "drupal/core-recommended": "^10.2",
-        "drupal/gin": "^3.0@rc",
+        "drupal/gin": "^3.0@RC",
         "drupal/gin_toolbar": "^1.0@rc",
         "drupal/next": "^1.6"
     },
