--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: ba4fd033-05ad-47ed-8f7f-e1d9b8504d1d
-name: 'Drupal 10'
+name: Formation
 mail: jeremy.thebault@jproject.fr
 slogan: ''
 page:
